<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".TempQuiz">

    <TextView
        android:id="@+id/temp_quizlet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/colorBlack"/>


    <RadioGroup
        android:id="@+id/radioQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <RadioButton
            android:text="@string/radio_strong_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:text="@string/radio_partially_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:text="@string/radio_neutral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:text="@string/radio_partially_disagree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:text="@string/radio_strong_disagree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>




    </RadioGroup>


    <Button
        android:layout_margin="16dp"
        android:layout_gravity="center"
        android:onClick="checkRadioButtons"
        style="@style/ButtonTheme"
        android:text="@string/next_button"/>



</LinearLayout>